# ssimd

./: Cargo.toml  README.md
examples/: mandelbrot.rs  spectralnorm.rs
src/: lib.rs
tests/: test.rs
