[package]
authors = ["Tung Duong <vn.duongthanhtung@gmail.com>", "lovasoa"]
description = "Simulated SIMD for Stable channel.\nEffort to make the `packed_simd` crate work on stable channel.\n"
keywords = ["simd"]
name = "simulated_packed_simd"
readme = "README.md"
repository = "https://github.com/lovasoa/ssimd"
license = "MIT/Apache-2.0"
version = "0.0.1"
edition = "2018"

[dependencies]

